--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D:\\\\Proj_files\\\\Project_Machine_Learning\\\\Completed projects\\\\Text Summariation'"
+       "'d:\\\\Proj_files\\\\Project_Machine_Learning\\\\Completed projects\\\\Text Summariation\\\\Text_Summarizer_Project_01\\\\research'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D:\\\\Proj_files\\\\Project_Machine_Learning\\\\Completed projects\\\\Text Summariation\\\\Text_Summarizer_Project_01'"
+       "'d:\\\\Proj_files\\\\Project_Machine_Learning\\\\Completed projects\\\\Text Summariation\\\\Text_Summarizer_Project_01'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +69,8 @@
      "output_type": "stream",
      "text": [
       "config\\config.yaml\n",
-      "[2023-06-12 11:15:26,130: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "{'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_url': 'https://github.com/srivanoo21/Text_Summarizer_Project_01/raw/main/summarizer-data.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzip_dir': 'artifacts/data_ingestion'}}\n",
+      "[2023-10-26 01:52:29,627: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "{'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_url': 'https://github.com/srivanoo21/Text_Summarizer_Project_01/raw/main/summarizer-data.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzip_dir': 'artifacts/data_ingestion'}, 'data_validation': {'root_dir': 'artifacts/data_validation', 'STATUS_FILE': 'artifacts/data_validation/status.txt', 'ALL_REQUIRED_FILES': ['train', 'test', 'validation']}, 'data_transformation': {'root_dir': 'artifacts/data_transformation', 'data_path': 'artifacts/data_ingestion/samsum_dataset', 'tokenizer_name': 'google/pegasus-cnn_dailymail'}, 'model_trainer': {'root_dir': 'artifacts/model_trainer', 'data_path': 'artifacts/data_transformation/samsum_dataset', 'model_ckpt': 'google/pegasus-cnn_dailymail'}, 'model_evaluation': {'root_dir': 'artifacts/model_evaluation', 'data_path': 'artifacts/data_transformation/samsum_dataset', 'model_path': 'artifacts/model_trainer/pegasus-samsum-model', 'tokenizer_path': 'artifacts/model_trainer/tokenizer', 'metric_file_name': 'artifacts/model_evaluation/metrics.csv'}}\n",
       "artifacts\n"
      ]
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,14 +145,12 @@
     "            unzip_dir = config.unzip_dir\n",
     "        )\n",
     "\n",
-    "        return data_ingestion_config\n",
-    "            \n",
-    "            "
+    "        return data_ingestion_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,18 +196,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-06-12 11:19:22,273: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-06-12 11:19:22,279: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-06-12 11:19:22,282: INFO: common: created directory at : artifacts]\n",
-      "[2023-06-12 11:19:22,285: INFO: common: created directory at : artifacts/data_ingestion]\n",
-      "[2023-06-12 11:19:29,108: INFO: 1326566912: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "[2023-10-26 23:09:25,492: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-10-26 23:09:25,508: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-10-26 23:09:25,516: INFO: common: created directory at : artifacts]\n",
+      "[2023-10-26 23:09:25,526: INFO: common: created directory at : artifacts/data_ingestion]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-10-26 23:09:32,403: INFO: 1326566912: artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 7903594\n",
       "Cache-Control: max-age=300\n",
@@ -220,20 +224,20 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: FF42:0806:207D09:312401:6486B1E3\n",
+      "X-GitHub-Request-Id: EB2A:09B8:1441B7:17E346:653AA452\n",
       "Accept-Ranges: bytes\n",
-      "Date: Mon, 12 Jun 2023 05:49:24 GMT\n",
+      "Date: Thu, 26 Oct 2023 17:39:33 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-ccu830048-CCU\n",
+      "X-Served-By: cache-maa10244-MAA\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1686548964.684069,VS0,VE738\n",
+      "X-Timer: S1698341971.170716,VS0,VE2231\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 028227a3e27c7de5d52eb08bed23ab89c7cdbb82\n",
-      "Expires: Mon, 12 Jun 2023 05:54:24 GMT\n",
-      "Source-Age: 0\n",
+      "X-Fastly-Request-ID: 407a510d3a163a5225de00f8a6a46d24f7336cce\n",
+      "Expires: Thu, 26 Oct 2023 17:44:33 GMT\n",
+      "Source-Age: 2\n",
       "\n",
       "]\n"
      ]
@@ -251,6 +255,27 @@
     "    raise e\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -276,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.18"
   },
   "orig_nbformat": 4
  },
